--- a/list-nps/Base.lproj/Main.storyboard
+++ b/list-nps/Base.lproj/Main.storyboard
@@ -4,6 +4,7 @@
     <dependencies>
         <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="15706"/>
         <capability name="Safe area layout guides" minToolsVersion="9.0"/>
+        <capability name="collection view cell content view" minToolsVersion="11.0"/>
         <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
     </dependencies>
     <scenes>
@@ -14,10 +15,111 @@
                     <view key="view" contentMode="scaleToFill" id="8bC-Xf-vdC">
                         <rect key="frame" x="0.0" y="0.0" width="414" height="896"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                        <subviews>
+                            <collectionView clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" dataMode="prototypes" translatesAutoresizingMaskIntoConstraints="NO" id="4xd-2z-d5q">
+                                <rect key="frame" x="0.0" y="89" width="414" height="772"/>
+                                <color key="backgroundColor" white="0.0" alpha="0.0" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                                <collectionViewFlowLayout key="collectionViewLayout" minimumLineSpacing="0.0" minimumInteritemSpacing="0.0" id="C8p-nl-A0a">
+                                    <size key="itemSize" width="50" height="50"/>
+                                    <size key="headerReferenceSize" width="0.0" height="0.0"/>
+                                    <size key="footerReferenceSize" width="0.0" height="0.0"/>
+                                    <inset key="sectionInset" minX="0.0" minY="0.0" maxX="0.0" maxY="0.0"/>
+                                </collectionViewFlowLayout>
+                                <cells>
+                                    <collectionViewCell opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" restorationIdentifier="DetailCollectionViewCell" reuseIdentifier="ListCollectionViewCell" id="EWD-7R-vQS" customClass="ListCollectionViewCell" customModule="list_nps" customModuleProvider="target">
+                                        <rect key="frame" x="0.0" y="0.0" width="169" height="162"/>
+                                        <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                                        <collectionViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" insetsLayoutMarginsFromSafeArea="NO" id="i5i-XR-kCH">
+                                            <rect key="frame" x="0.0" y="0.0" width="169" height="162"/>
+                                            <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                                            <subviews>
+                                                <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="fIs-eg-UMU">
+                                                    <rect key="frame" x="0.0" y="0.0" width="169" height="162"/>
+                                                    <subviews>
+                                                        <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" translatesAutoresizingMaskIntoConstraints="NO" id="k7m-V8-Cjg">
+                                                            <rect key="frame" x="0.0" y="0.0" width="169" height="162"/>
+                                                            <userDefinedRuntimeAttributes>
+                                                                <userDefinedRuntimeAttribute type="number" keyPath="borderWidth">
+                                                                    <real key="value" value="0.0"/>
+                                                                </userDefinedRuntimeAttribute>
+                                                                <userDefinedRuntimeAttribute type="number" keyPath="cornerRadius">
+                                                                    <real key="value" value="0.0"/>
+                                                                </userDefinedRuntimeAttribute>
+                                                                <userDefinedRuntimeAttribute type="color" keyPath="borderColor">
+                                                                    <color key="value" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                                                                </userDefinedRuntimeAttribute>
+                                                            </userDefinedRuntimeAttributes>
+                                                        </imageView>
+                                                        <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="d1C-rY-hPZ">
+                                                            <rect key="frame" x="0.0" y="122" width="169" height="40"/>
+                                                            <subviews>
+                                                                <view alpha="0.5" contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="bn8-cw-6ji">
+                                                                    <rect key="frame" x="0.0" y="0.0" width="169" height="40"/>
+                                                                    <color key="backgroundColor" white="0.0" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                                                                </view>
+                                                                <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="cLZ-6Z-flc">
+                                                                    <rect key="frame" x="20" y="10.5" width="129" height="19.5"/>
+                                                                    <fontDescription key="fontDescription" type="system" pointSize="16"/>
+                                                                    <color key="textColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                                                                    <nil key="highlightedColor"/>
+                                                                </label>
+                                                            </subviews>
+                                                            <color key="backgroundColor" white="0.0" alpha="0.0" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                                                            <constraints>
+                                                                <constraint firstAttribute="bottom" secondItem="bn8-cw-6ji" secondAttribute="bottom" id="5RD-Qd-Xj3"/>
+                                                                <constraint firstItem="cLZ-6Z-flc" firstAttribute="leading" secondItem="d1C-rY-hPZ" secondAttribute="leading" constant="20" id="6en-qu-7EX"/>
+                                                                <constraint firstItem="cLZ-6Z-flc" firstAttribute="centerX" secondItem="d1C-rY-hPZ" secondAttribute="centerX" id="CGf-ez-Nih"/>
+                                                                <constraint firstAttribute="trailing" secondItem="bn8-cw-6ji" secondAttribute="trailing" id="U3D-G2-jHv"/>
+                                                                <constraint firstItem="bn8-cw-6ji" firstAttribute="top" secondItem="d1C-rY-hPZ" secondAttribute="top" id="fYL-zQ-wzG"/>
+                                                                <constraint firstAttribute="trailing" secondItem="cLZ-6Z-flc" secondAttribute="trailing" constant="20" id="gaW-Xq-uwU"/>
+                                                                <constraint firstItem="bn8-cw-6ji" firstAttribute="leading" secondItem="d1C-rY-hPZ" secondAttribute="leading" id="qzJ-AD-k64"/>
+                                                                <constraint firstAttribute="height" constant="40" id="spg-sQ-SUa"/>
+                                                                <constraint firstItem="cLZ-6Z-flc" firstAttribute="centerY" secondItem="d1C-rY-hPZ" secondAttribute="centerY" id="tfG-uq-FRE"/>
+                                                            </constraints>
+                                                        </view>
+                                                    </subviews>
+                                                    <color key="backgroundColor" white="0.0" alpha="0.0" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                                                    <constraints>
+                                                        <constraint firstAttribute="trailing" secondItem="k7m-V8-Cjg" secondAttribute="trailing" id="1I5-CX-ZPc"/>
+                                                        <constraint firstAttribute="bottom" secondItem="k7m-V8-Cjg" secondAttribute="bottom" id="BUa-aY-Kns"/>
+                                                        <constraint firstItem="d1C-rY-hPZ" firstAttribute="leading" secondItem="fIs-eg-UMU" secondAttribute="leading" id="Jov-ZY-O3H"/>
+                                                        <constraint firstItem="k7m-V8-Cjg" firstAttribute="top" secondItem="fIs-eg-UMU" secondAttribute="top" id="U21-0T-Pg1"/>
+                                                        <constraint firstItem="k7m-V8-Cjg" firstAttribute="leading" secondItem="fIs-eg-UMU" secondAttribute="leading" id="U59-gx-Fx0"/>
+                                                        <constraint firstAttribute="bottom" secondItem="d1C-rY-hPZ" secondAttribute="bottom" id="ax3-xj-QcN"/>
+                                                        <constraint firstAttribute="trailing" secondItem="d1C-rY-hPZ" secondAttribute="trailing" id="gGz-UC-qBv"/>
+                                                    </constraints>
+                                                </view>
+                                            </subviews>
+                                            <constraints>
+                                                <constraint firstAttribute="trailing" secondItem="fIs-eg-UMU" secondAttribute="trailing" id="B9h-9N-PnB"/>
+                                                <constraint firstItem="fIs-eg-UMU" firstAttribute="top" secondItem="i5i-XR-kCH" secondAttribute="top" id="L6Q-GB-1be"/>
+                                                <constraint firstAttribute="bottom" secondItem="fIs-eg-UMU" secondAttribute="bottom" id="e2j-0Z-ilG"/>
+                                                <constraint firstItem="fIs-eg-UMU" firstAttribute="leading" secondItem="i5i-XR-kCH" secondAttribute="leading" id="fWK-LT-QUP"/>
+                                            </constraints>
+                                        </collectionViewCellContentView>
+                                        <size key="customSize" width="169" height="162"/>
+                                        <connections>
+                                            <outlet property="containerView" destination="fIs-eg-UMU" id="4Sf-2w-c2d"/>
+                                            <outlet property="nameLabel" destination="cLZ-6Z-flc" id="hxW-Vq-1Gd"/>
+                                            <outlet property="photoImageView" destination="k7m-V8-Cjg" id="fZm-Ij-XMn"/>
+                                        </connections>
+                                    </collectionViewCell>
+                                </cells>
+                            </collectionView>
+                        </subviews>
                         <color key="backgroundColor" systemColor="systemBackgroundColor" cocoaTouchSystemColor="whiteColor"/>
+                        <constraints>
+                            <constraint firstItem="6Tk-OE-BBY" firstAttribute="trailing" secondItem="4xd-2z-d5q" secondAttribute="trailing" id="1J8-jB-ces"/>
+                            <constraint firstItem="4xd-2z-d5q" firstAttribute="top" secondItem="6Tk-OE-BBY" secondAttribute="top" constant="1" id="34j-cs-war"/>
+                            <constraint firstItem="6Tk-OE-BBY" firstAttribute="bottom" secondItem="4xd-2z-d5q" secondAttribute="bottom" constant="1" id="k1f-eE-wrN"/>
+                            <constraint firstItem="4xd-2z-d5q" firstAttribute="leading" secondItem="8bC-Xf-vdC" secondAttribute="leading" id="kdb-s6-Ffs"/>
+                        </constraints>
                         <viewLayoutGuide key="safeArea" id="6Tk-OE-BBY"/>
                     </view>
                     <navigationItem key="navigationItem" id="Q2T-sB-1Iv"/>
+                    <connections>
+                        <outlet property="collectionView" destination="4xd-2z-d5q" id="8er-3x-EST"/>
+                    </connections>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="dkx-z0-nzr" sceneMemberID="firstResponder"/>
             </objects>
