--- a/list-nps/Base.lproj/Main.storyboard
+++ b/list-nps/Base.lproj/Main.storyboard
@@ -68,7 +68,6 @@
                                                             <constraints>
                                                                 <constraint firstAttribute="bottom" secondItem="bn8-cw-6ji" secondAttribute="bottom" id="5RD-Qd-Xj3"/>
                                                                 <constraint firstItem="cLZ-6Z-flc" firstAttribute="leading" secondItem="d1C-rY-hPZ" secondAttribute="leading" constant="20" id="6en-qu-7EX"/>
-                                                                <constraint firstItem="cLZ-6Z-flc" firstAttribute="centerX" secondItem="d1C-rY-hPZ" secondAttribute="centerX" id="CGf-ez-Nih"/>
                                                                 <constraint firstAttribute="trailing" secondItem="bn8-cw-6ji" secondAttribute="trailing" id="U3D-G2-jHv"/>
                                                                 <constraint firstItem="bn8-cw-6ji" firstAttribute="top" secondItem="d1C-rY-hPZ" secondAttribute="top" id="fYL-zQ-wzG"/>
                                                                 <constraint firstAttribute="trailing" secondItem="cLZ-6Z-flc" secondAttribute="trailing" constant="20" id="gaW-Xq-uwU"/>
@@ -119,11 +118,89 @@
                     <navigationItem key="navigationItem" id="Q2T-sB-1Iv"/>
                     <connections>
                         <outlet property="collectionView" destination="4xd-2z-d5q" id="8er-3x-EST"/>
+                        <segue destination="189-Fy-jMB" kind="show" identifier="showDetail" id="N0T-YK-uK4"/>
                     </connections>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="dkx-z0-nzr" sceneMemberID="firstResponder"/>
             </objects>
             <point key="canvasLocation" x="1042.0289855072465" y="138.61607142857142"/>
+        </scene>
+        <!--ListDetailViewController-->
+        <scene sceneID="cv0-C9-N8G">
+            <objects>
+                <viewController storyboardIdentifier="ListDetailViewController" title="ListDetailViewController" id="189-Fy-jMB" customClass="ListDetailViewController" customModule="list_nps" customModuleProvider="target" sceneMemberID="viewController">
+                    <view key="view" contentMode="scaleToFill" id="EZv-K8-hLf">
+                        <rect key="frame" x="0.0" y="0.0" width="414" height="896"/>
+                        <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                        <subviews>
+                            <scrollView clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="rHt-TV-jpO">
+                                <rect key="frame" x="1" y="1" width="412" height="860"/>
+                                <subviews>
+                                    <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="a5l-SE-kxn">
+                                        <rect key="frame" x="0.0" y="0.0" width="412" height="620"/>
+                                        <subviews>
+                                            <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" translatesAutoresizingMaskIntoConstraints="NO" id="SCy-Fr-2sx">
+                                                <rect key="frame" x="0.0" y="0.0" width="412" height="240"/>
+                                                <constraints>
+                                                    <constraint firstAttribute="height" constant="240" id="Jlb-tE-cpI"/>
+                                                </constraints>
+                                            </imageView>
+                                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="252" text="Label" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="J3Z-kc-hiI">
+                                                <rect key="frame" x="177.5" y="260" width="57" height="29"/>
+                                                <fontDescription key="fontDescription" type="system" pointSize="24"/>
+                                                <nil key="textColor"/>
+                                                <nil key="highlightedColor"/>
+                                            </label>
+                                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" textAlignment="justified" lineBreakMode="tailTruncation" numberOfLines="0" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="qu2-UE-ddO">
+                                                <rect key="frame" x="10" y="309" width="392" height="26.5"/>
+                                                <fontDescription key="fontDescription" type="system" pointSize="22"/>
+                                                <color key="textColor" systemColor="systemGreenColor" red="0.20392156859999999" green="0.78039215689999997" blue="0.34901960780000002" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+                                                <nil key="highlightedColor"/>
+                                            </label>
+                                        </subviews>
+                                        <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                                        <constraints>
+                                            <constraint firstItem="qu2-UE-ddO" firstAttribute="leading" secondItem="a5l-SE-kxn" secondAttribute="leading" constant="10" id="8A9-Fm-dJJ"/>
+                                            <constraint firstAttribute="height" constant="620" id="G99-By-swJ"/>
+                                            <constraint firstAttribute="trailing" secondItem="SCy-Fr-2sx" secondAttribute="trailing" id="Jc6-mI-ciO"/>
+                                            <constraint firstItem="J3Z-kc-hiI" firstAttribute="top" secondItem="SCy-Fr-2sx" secondAttribute="bottom" constant="20" id="Or4-xC-aOw"/>
+                                            <constraint firstItem="SCy-Fr-2sx" firstAttribute="top" secondItem="a5l-SE-kxn" secondAttribute="top" id="Rph-nN-ah1"/>
+                                            <constraint firstAttribute="trailing" secondItem="qu2-UE-ddO" secondAttribute="trailing" constant="10" id="VqY-A5-X4D"/>
+                                            <constraint firstItem="J3Z-kc-hiI" firstAttribute="centerX" secondItem="a5l-SE-kxn" secondAttribute="centerX" id="YBO-lh-IAD"/>
+                                            <constraint firstItem="SCy-Fr-2sx" firstAttribute="leading" secondItem="a5l-SE-kxn" secondAttribute="leading" id="nYX-le-rtm"/>
+                                            <constraint firstItem="qu2-UE-ddO" firstAttribute="top" secondItem="J3Z-kc-hiI" secondAttribute="bottom" constant="20" id="pYs-am-Ita"/>
+                                        </constraints>
+                                    </view>
+                                </subviews>
+                                <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                                <constraints>
+                                    <constraint firstItem="a5l-SE-kxn" firstAttribute="leading" secondItem="rHt-TV-jpO" secondAttribute="leading" id="0fH-tr-LHt"/>
+                                    <constraint firstAttribute="trailing" secondItem="a5l-SE-kxn" secondAttribute="trailing" id="DR1-6s-YmI"/>
+                                    <constraint firstItem="a5l-SE-kxn" firstAttribute="top" secondItem="rHt-TV-jpO" secondAttribute="top" id="NnY-EC-jHO"/>
+                                    <constraint firstAttribute="bottom" secondItem="a5l-SE-kxn" secondAttribute="bottom" constant="10" id="qcm-rG-mF5"/>
+                                    <constraint firstItem="a5l-SE-kxn" firstAttribute="centerX" secondItem="rHt-TV-jpO" secondAttribute="centerX" id="zZa-tl-j72"/>
+                                </constraints>
+                            </scrollView>
+                        </subviews>
+                        <color key="backgroundColor" systemColor="systemBackgroundColor" cocoaTouchSystemColor="whiteColor"/>
+                        <constraints>
+                            <constraint firstItem="rHt-TV-jpO" firstAttribute="leading" secondItem="EZv-K8-hLf" secondAttribute="leading" constant="1" id="Ofe-pz-VEc"/>
+                            <constraint firstItem="bNj-ag-dez" firstAttribute="trailing" secondItem="rHt-TV-jpO" secondAttribute="trailing" constant="1" id="dTy-OR-cCB"/>
+                            <constraint firstItem="rHt-TV-jpO" firstAttribute="top" secondItem="EZv-K8-hLf" secondAttribute="top" constant="1" id="iih-cc-T6t"/>
+                            <constraint firstItem="bNj-ag-dez" firstAttribute="bottom" secondItem="rHt-TV-jpO" secondAttribute="bottom" constant="1" id="tXA-OF-Lqk"/>
+                        </constraints>
+                        <viewLayoutGuide key="safeArea" id="bNj-ag-dez"/>
+                    </view>
+                    <navigationItem key="navigationItem" id="DUd-lA-Z7n"/>
+                    <connections>
+                        <outlet property="descLabel" destination="qu2-UE-ddO" id="i6B-ME-myN"/>
+                        <outlet property="numberImageLabel" destination="J3Z-kc-hiI" id="AnY-p8-mdj"/>
+                        <outlet property="photoImageView" destination="SCy-Fr-2sx" id="CxG-u3-xdB"/>
+                    </connections>
+                </viewController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="LiX-F0-EwY" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="1903" y="139"/>
         </scene>
         <!--Navigation Controller-->
         <scene sceneID="uM3-qg-0Z0">
